--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,21 +1,18 @@
+---
+import "../style/global.css";
+---
 <!doctype html>
 <html lang="id">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM</title>
+		<title>Kelas 01SIFP010 SI UNPAM</title>
+		<meta name="description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+  		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
+  		<meta name="author" content="Arrosyid Al Ayubi">
 	</head>
-	<body>
+	<body class="flex flex-col min-h-screen">
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
