--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,15 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Home from '../components/Home.astro';
+import Navigasi from '../components/Navigasi.astro';
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro';
+import Anggota from '../components/Anggota.astro';
+
 ---
 
 <Layout>
-	<Welcome />
+	<Navigasi />
+	<Home />
+	<Anggota />
+	<Footer />
 </Layout>
