fix image not show

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import "../style/global.css";
 import { Image } from "astro:assets"
-import logounpam from "../../public/logo-unpam.png";
+import logounpam from "../assets/logo-unpam.png";
 ---
 <footer class="p-4 bg-white md:p-8 lg:p-10 dark:bg-gray-800">
   <div class="mx-auto max-w-7xl text-center">
