fix photo and opengraph

--- a/src/components/Navigasi.astro
+++ b/src/components/Navigasi.astro
@@ -1,7 +1,7 @@
 ---
 import "../style/global.css";
 import { Image } from "astro:assets"
-import logounpam from "../assets/logo-unpam.png";
+import logounpam from "../../public/logo-unpam.png";
 ---
 <div class="w-full bg-cyan-950 text-white flex flex-row justify-around items-center p-5">
     <Image src={logounpam}
