--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,7 @@ import Footer from '../components/Footer.astro';
 import Anggota from '../components/Anggota.astro';
 
 ---
-
-<Layout>
+<Layout title="Kelas 01SIFP010 SI UNPAM">
 	<Navigasi />
 	<Home />
 	<Anggota />
