--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,16 @@
 ---
 import "../style/global.css";
+import { SEO } from "astro-seo";
+import { getImagePath } from "astro-opengraph-images";
+interface Props {
+  title: string;
+}
+
+const { title } = Astro.props;
+const { url, site } = Astro;
+
+const openGraphImageUrl = getImagePath({ url, site });
+---
 ---
 <!doctype html>
 <html lang="id">
@@ -11,6 +22,32 @@ import "../style/global.css";
 		<meta name="description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
   		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
   		<meta name="author" content="Arrosyid Al Ayubi">
+		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta property="og:url" content="https://kelas10sifp.my.id/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta property="og:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta property="og:image" content="og.png">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="kelas10sifp.my.id">
+		<meta property="twitter:url" content="https://kelas10sifp.my.id/">
+		<meta name="twitter:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta name="twitter:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta name="twitter:image" content="og.png">
+		<SEO
+     openGraph={
+        {
+          basic: {
+            title: title,
+            type: "website",
+            image: openGraphImageUrl,
+            url: url,
+          },
+          optional: {
+            description: "Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM",
+          },
+        }
+      } />
 	</head>
 	<body class="flex flex-col min-h-screen">
 		<slot />
