--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,13 +16,13 @@ import "../style/global.css";
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
 		<meta property="og:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
-		<meta property="og:image" content="og.png">
+		<meta property="og:image" content="/og.png">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta property="twitter:domain" content="kelas10sifp.my.id">
 		<meta property="twitter:url" content="https://kelas10sifp.my.id/">
 		<meta name="twitter:title" content="Kelas 01SIFP010 SI UNPAM">
 		<meta name="twitter:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
-		<meta name="twitter:image" content="og.png">
+		<meta name="twitter:image" content="/og.png">
 	</head>
 	<body class="flex flex-col min-h-screen">
 		<slot />
