delete dark mode

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -4,127 +4,156 @@
 <section id="anggota" class="bg-white p-5 md:p-20 h-full">
     <div class="mx-auto max-w-7xl px-4 lg:px-12">
         <h2 class="text-2xl font-bold mb-4 text-center">Anggota Kelas 01SIFP010</h2>
-        <div class="bg-white dark:bg-gray-800 relative shadow-md sm:rounded-lg overflow-hidden mt-10">
+        <div class="bg-white relative shadow-md sm:rounded-lg overflow-hidden mt-10">
             <div class="overflow-x-auto">
                 <table class="w-full text-sm text-left text-white">
-                    <thead class="text-xs text-white uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <thead class="text-lg  uppercase bg-gray-500 text-white">
                         <tr>
+                            <th scope="col" class="px-4 py-3">No</th>
                             <th scope="col" class="px-4 py-3">Nama Anggota</th>
                             <th scope="col" class="px-4 py-3">Link Github</th>
                         </tr>
                     </thead> 
                     <tbody>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Ahmad Raihan Maulana Setiawan</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">1</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Ahmad Raihan Maulana Setiawan</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Andini Azaria Zahra</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">2</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Andini Azaria Zahra</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Arrosyid Al Ayubi</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">3</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Arrosyid Al Ayubi</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Arum Kusuma Dewi</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">4</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Arum Kusuma Dewi</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Azzura Agustina</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">5</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Azzura Agustina</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Diaz Prasojo</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">6</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Diaz Prasojo</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Diaz Shandika Firdaus</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">7</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Diaz Shandika Firdaus</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Gladys Aditya Ramadhan</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">8</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Gladys Aditya Ramadhan</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Farah Hilallia Alvina</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">9</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Farah Hilallia Alvina</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Haikal Azhar</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">10</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Haikal Azhar</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Harsya Pandawa</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">11</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Harsya Pandawa</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Hisyam Arief Firmansyah</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">12</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Hisyam Arief Firmansyah</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Ihwan Ramadani</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">13</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Ihwan Ramadani</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Isma Khoyriyah</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">14</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Isma Khoyriyah</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Liza Zulaikha</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">15</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Liza Zulaikha</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Maylova Chayananda</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">16</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Maylova Chayananda</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Muhamad Gilang Ramadan</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">17</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhamad Gilang Ramadan</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Muhammad Rizqi Rahman</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">18</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Rizqi Rahman</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Muhammad Shandi Yudha</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">19</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Shandi Yudha</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Muhammad Zaky Permana</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">20</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Muhammad Zaky Permana</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Rayhan Priyonggo</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">21</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rayhan Priyonggo</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Refael Gomgom Sibarani</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">22</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Refael Gomgom Sibarani</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Rifky Chaezario Hidayat</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">23</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rifky Chaezario Hidayat</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Rizka Nur Juniarti</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">24</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rizka Nur Juniarti</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Rizky Nur Rahman</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">25</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Rizky Nur Rahman</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Sultan Muhammad Syafiq</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">26</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Sultan Muhammad Syafiq</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Surya Aji Prasetya</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">27</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Surya Aji Prasetya</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
-                        <tr class="border-b dark:border-gray-700">
-                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">Zaqi Alfataillah</th>
-                            <td class="px-4 py-3">Link Website</td>
+                        <tr class="border-b border-gray-700">
+                            <td class="px-4 py-3 text-gray-900">28</td>
+                            <th scope="row" class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap">Zaqi Alfataillah</th>
+                            <td class="px-4 py-3 text-gray-900">Link Website</td>
                         </tr>
                     </tbody>
                 </table>
