--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,31 @@ import Footer from '../components/Footer.astro';
 import Anggota from '../components/Anggota.astro';
 
 ---
-<Layout title="Kelas 01SIFP010 SI UNPAM">
-	<Navigasi />
-	<Home />
-	<Anggota />
-	<Footer />
+<head>
+		<meta name="description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+  		<meta name="keywords" content="Kelas,01SIFP010,Sistem,Informasi,UNPAM,Universitas,Pamulang">
+  		<meta name="author" content="Arrosyid Al Ayubi">
+		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta property="og:url" content="https://kelas10sifp.my.id">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta property="og:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta property="og:image" content="https://kelas10sifp.my.id/og.png">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="kelas10sifp.my.id">
+		<meta property="twitter:url" content="https://kelas10sifp.my.id/">
+		<meta name="twitter:title" content="Kelas 01SIFP010 SI UNPAM">
+		<meta name="twitter:description" content="Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM">
+		<meta name="twitter:image" content="https://kelas10sifp.my.id/og.png">
+</head>
+	<body>
+		<Layout title="Kelas 01SIFP010 SI UNPAM">
+			<Navigasi />
+			<Home />
+			<Anggota />
+			<Footer />
+		</Layout>
+	</body>
+</html>
+
 </Layout>
