--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,9 @@ import "../style/global.css";
 import { Image } from "astro:assets"
 import logounpam from "../../public/logo-unpam.png";
 ---
-<footer class="p-4 bg-white md:p-8 lg:p-10 dark:bg-gray-800">
+<footer class="p-4 md:p-8 lg:p-10 bg-gray-800">
   <div class="mx-auto max-w-7xl text-center">
-      <a href="/" class="flex justify-center items-center gap-5 text-2xl font-semibold text-gray-900 dark:text-white">
+      <a href="/" class="flex justify-center items-center gap-5 text-2xl font-semibold text-white">
           <Image src={logounpam} 
           alt="Logo Unpam" 
           height="300"
@@ -16,8 +16,8 @@ import logounpam from "../../public/logo-unpam.png";
           class="max-h-28 max-w-28"/>
           Kelas01SIFP010    
       </a>
-      <p class="my-6 text-gray-500 dark:text-gray-400">Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM</p>
-      <ul class="flex flex-wrap justify-center items-center mb-6 text-gray-900 dark:text-white">
+      <p class="my-6 text-gray-400">Website Resmi Kelas 01SIFP010 Sistem Informasi UNPAM</p>
+      <ul class="flex flex-wrap justify-center items-center mb-6 text-white">
           <li>
               <a href="/" class="mr-4 hover:underline md:mr-6 ">Beranda</a>
           </li>
@@ -28,6 +28,6 @@ import logounpam from "../../public/logo-unpam.png";
               <a href="/#anggota" class="mr-4 hover:underline md:mr-6 ">Anggota</a>
           </li>
       </ul>
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">&copy; 2025 <a href="/" class="hover:underline">Kelas01SIFP010</a>. All Rights Reserved.</span>
+      <span class="text-sm sm:text-center text-gray-400">&copy; 2025 <a href="/" class="hover:underline">Kelas01SIFP010</a>. All Rights Reserved.</span>
   </div>
 </footer>
